--- a/README.textile
+++ b/README.textile
@@ -10,23 +10,25 @@ able to collaborate to create blikis, QAs, books).
 h2. Install
 
 h3. Requirements
+
 * ruby 1.8.5+
 * gem 1.3.1+
 * rails 2.2.2
 * TinyMCE
 
 h3. Let's start
+
 * Change to OpenKH directory
 * Config openkh
 Copy config/conf.rb.sample => config/conf.rb
 * Config database
 Copy config/database.yml.sample_sqlite3(or postgresql, mysql) => config/database.yml, modify it and run rake db:create to create new database
-* Then install OpenKH:
+* Then install OpenKH
 rake openkh:install
 * To add demo data (with an account with user name "admin" password "admin"):
 rake openkh:demo
 * Finished? 
-  - Yes, it works fine    => Congaratulation! Welcome to openkh!
+  - Yes, it works fine    => Congratulation! Welcome to openkh!
   - No, I got some errors => Find some help at development mailing list: http://rubyforge.org/mail/?group_id=3480
 
 h3. Install/uninstall module
