--- a/README.textile
+++ b/README.textile
@@ -1,5 +1,3 @@
-h1. OpenKH
-
 OpenKH is Open + Know-How. It aims to become "Drupal on Rails" with one
 difference: OPEN
 * There are only 2 types of users: normal user and admin (e.g no moderator).
@@ -7,52 +5,50 @@ difference: OPEN
 OpenKH is perfect for building open community sites (e.g. sites where users are
 able to collaborate to create blikis, QAs, books).
 
-h2. Install
+* "Demo":http://demo.cntt.tv/
+* "Wiki":http://wiki.github.com/ngocdaothanh/openkh (instruction to install etc.)
+
+h2. Installation
+
+You should have some experience with deploying Rails applications
+(see http://rubyonrails.org/deploy) to successfully installing OpenKH. If you
+have trouble installing OpenKH, find some help at the mailing list:
+http://rubyforge.org/mail/?group_id=3480
 
 h3. Requirements
 
 * ruby 1.8.5+
 * gem 1.3.1+
-* rails 2.2.2
-* TinyMCE
 
-h3. Let's start
+h3. Install OpenKH
 
 * Change to OpenKH directory
-* Config openkh
-Copy config/conf.rb.sample => config/conf.rb
-* Config database
-Copy config/database.yml.sample_sqlite3(or postgresql, mysql) => config/database.yml, modify it and run rake db:create to create new database
-* Then install OpenKH
-rake openkh:install
+* Copy config/conf.rb.sample to config/conf.rb and make proper modification
+* Copy config/database.yml.sample_sqlite3 (or postgresql, mysql) to
+config/database.yml and make proper modification, then create the DB. You may
+create DB by running rake db:create if the user you specify has enough
+permission.
+* Install OpenKH: rake openkh:install
 * To add demo data (with an account with user name "admin" password "admin"):
 rake openkh:demo
-* Finished? 
-  - Yes, it works fine    => Congratulation! Welcome to openkh!
-  - No, I got some errors => Find some help at development mailing list: http://rubyforge.org/mail/?group_id=3480
+* Now you can start OpenKH as a normal Rails application
 
 h3. Install/uninstall module
 
-* To install, copy it to modules directory and run
-rake db:migrate:plugin name=<module name>
-* To uninstall, run
-rake db:migrate:plugin name=<module name> VERSION=0
+* To install, copy it to modules directory and run:
+rake db:migrate:plugin name=[module name]
+* To uninstall, run:
+rake db:migrate:plugin name=[module name] VERSION=0
 and delete its directory
-* NOTE: You need to restart OpenKH after installing or uninstalling module.
-
-h2. Links
-
-* "Demo":http://demo.cntt.tv/
-* "Wiki":http://wiki.github.com/ngocdaothanh/openkh (instruction to install etc.)
+* Remember to restart OpenKH after installing/uninstalling
 
 h2. Developers
 
 h3. Current developers
 
-* "Nguyen Tuan Anh":http://rubyforge.org/users/akia/   
-* "Pham Manh Lan":http://rubyforge.org/users/rollingstone/         
-* "Dao Thanh Ngoc":http://rubyforge.org/users/ngocdaothanh/      
-* "Nguyen Duy Tho":http://rubyforge.org/users/ntdt/         
+* "Nguyen Tuan Anh":http://rubyforge.org/users/akia/
+* "Dao Thanh Ngoc":http://rubyforge.org/users/ngocdaothanh/
+* "Nguyen Duy Tho":http://rubyforge.org/users/ntdt/
 
 h3. Retired developers
 
