--- a/modules/core/category/config/locales/en.yml
+++ b/modules/core/category/config/locales/en.yml
@@ -8,3 +8,8 @@ en:
   categories_block:
     title: "Categories"
     help: "List of categories."
+
+  toc_block:
+    title: "Table of contents"
+    help: "This block can be used for displaying table of contents for the whole site and each category."
+    no_category: "There is no existing category. You need to create one."
