--- a/README.textile
+++ b/README.textile
@@ -7,21 +7,18 @@ able to collaborate to create blikis, QAs, books).
 * "Demo":http://demo.cntt.tv/
 * "Wiki":http://wiki.github.com/ngocdaothanh/openkh (instruction to install etc.)
 
-h2. Installation
+h2. Install OpenKH
 
 You should have some experience with deploying Rails applications
 (see http://rubyonrails.org/deploy) to successfully installing OpenKH. If you
 have trouble installing OpenKH, you may ask for help at the "mailing list":http://rubyforge.org/mail/?group_id=3480.
 
-Use git-submodule to install additional modules
-
-h3. Requirements
-
-* ruby 1.8.5+
+Requirements:
+* ruby 1.8.7
 * gem 1.3.1+
 
-h3. Install OpenKH
-
+Steps:
+* Download latest ZIP file from "RubyForge":http://rubyforge.org/frs/?group_id=3480
 * Change to OpenKH directory
 * Copy config/conf.rb.sample to config/conf.rb and make proper modification
 * Copy config/database.yml.sample_sqlite3 (or postgresql, mysql) to
@@ -31,9 +28,9 @@ permission.
 * Install OpenKH: rake openkh:install
 * To add demo data (with an account with user name "admin" password "admin"):
 rake openkh:demo
-* Now you can start OpenKH as a normal Rails application
+* Start OpenKH as a normal Rails application
 
-h3. Install/uninstall module
+h2. Install/uninstall module
 
 * To install, copy it to modules directory and run:
 rake db:migrate:plugin name=[module name]
