--- a/README.textile
+++ b/README.textile
@@ -16,6 +16,7 @@ have trouble installing OpenKH, you may ask for help at the "mailing list":http:
 Requirements:
 * ruby 1.8.7
 * gem 1.3.1+
+* PostgreSQL or MySQL
 
 Steps:
 * Download latest ZIP file from "RubyForge":http://rubyforge.org/frs/?group_id=3480
