--- a/modules/core/category/config/locales/en.yml
+++ b/modules/core/category/config/locales/en.yml
@@ -12,4 +12,6 @@ en:
   toc_block:
     title: "Table of contents"
     help: "This block can be used for displaying table of contents for the whole site and each category."
-    no_category: "There is no existing category. You need to create one."
+
+    title_for_category: "Table of contents of category {{name}}"
+    title_for_site: "Table of contents of site"
