Remove unnecessary READMEs

--- a/modules/standard/chat/README.textile
+++ b/modules/standard/chat/README.textile
@@ -1,5 +1,5 @@
 This module adds chat block:
 * browser <-- (flash socket) --> chat server --> DB
 
-Start chat server:
+To start chat server:
 ruby modules/standard/chat/script/chat_server
