Upgrade to Rails 3

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,6 @@
+# Localization file for English. Add more files in this directory for other locales.
+# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
+
 en:
   common:
     home: "Home"
