--- a/modules/standard/chat/config/locales/en.yml
+++ b/modules/standard/chat/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   chat:
-    need_flash: "Please install {{link}}"
+    need_flash: "Please install %{link}"
     flash_9_or_above: "Flash player 9 or above"
     toggle_messages_users: "Messages | Users"
 
