--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,3 @@
-# Localization file for English. Add more files in this directory for other locales.
-# See http://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
-
 en:
   common:
     home: "Home"
@@ -17,7 +14,7 @@ en:
     parent: "Parent"
     position: "Position"
 
-    error_400: "This page does not exist."
+    error_404: "Page not found."
     error_500: "There is error."
 
     show: "Show detail"
@@ -31,9 +28,9 @@ en:
     version_reverted: "Version reverted"
 
     time: "Time"
-    time_ago: "{{dt}} ago"
-    updated_ago: "Updated {{dt}} ago"
-    diff: "Diff of version {{v1}} and {{v2}}"
+    time_ago: "%{dt} ago"
+    updated_ago: "Updated %{dt} ago"
+    diff: "Diff of version %{v1} and %{v2}"
 
     admin: "Admin"
     limit: "Limit"
